--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -4,7 +4,7 @@
 @import "{{ site.theme }}";
 
 section {
-    width:800px;
-    float:right;
-    padding-bottom:50px;
+    //width:800px;
+    /*float:right;
+    padding-bottom:50px;*/
   }
